<resources>
    <string name="app_name">Samsung_HW</string>
    <string name="samsung_homework">Samsung Homework</string>
    <string name="game_selection_string">Select a game from the list below</string>
    <string name="game_statistics_string">Or select Statistics button for view your game stats</string>
    <string name="tictactoe_button_string">TicTacToe</string>
    <string name="battleship_button_string">BattleShip</string>
    <string name="pacman_button_string">Pacman</string>
    <string name="statistics_button_string">Statistics</string>
    <string name="go_back_button_string">Go back</string>

    <string name="new_button_label">New Game</string>
    <string name="title_activity_place_ships">PlaceShipsActivity</string>
    <string name="smart_opponent">Smart Opponent</string>
    <string name="random_opponent">Random Opponent</string>
    <string name="wifi_p2p_opponent">Wifi Direct Opponent</string>
    <string name="opponent_select">Select Opponent</string>
    <string name="reset_game_title">Reset game</string>
    <string name="reset_game_prompt">Are you sure you want to restart the current game?</string>
    <string name="reset_game_request_prompt">Request to other player to start a new game?</string>
    <string name="reset_game_connected_prompt">Other player requested to play new game, accept request?</string>
    <string name="new_game">New</string>
    <string name="place_ships">Place ships</string>
    <string name="strategy">Random Opponent</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="disable_sound">Disable Sound</string>
    <string name="rotate_ship">Rotate Ship</string>
    <string name="winner_title">Winner!</string>
    <string name="loser_title">Loser!</string>
    <string name="winner_description">You have beaten the game by sinking all of the ships!</string>
    <string name="loser_description">You have lost the game, your opponent sank all your ships before you did.</string>
    <string name="player_turn_status">It is your turn </string>
    <string name="computer_turn_status">It it computer\'s turn </string>
    <string name="opponent_turn_status">It it opponent\'s turn </string>
    <string name="win_status">You have won the game! </string>
    <string name="lose_status">You have lost the game! </string>
    <string name="title_activity_connection">ConnectionActivity</string>

    <string name="action_settings">Settings</string>
    <string name ="resume">Resume</string>
    <string name="play">New Game</string>
    <string name="help">How To Play</string>

    <string name="howToPlayLabel">HOW TO PLAY</string>
    <string name="howToPlay">Pacman, our hero, munches his way around the map, eating all of the
        dots. However, life isn\'t easy for our young little hero. Along his journey, he faces
        spooky ghosts who will try to hurt him. Avoid them! In each corner of the map, there is a
        power pellet. If Pacman eats a power pellet, he is temporarily gains the power to eat enemy
        ghosts.
    </string>
    <string name="controlsLabel">CONTROLS</string>
    <string name="controls">Up: Swipe Up\nDown: Swipe Down\nLeft: Swipe Left\nRight: Swipe Right\n
        "Pause: Hold Screen    "
    </string>
    <string name="settingsLabel">Settings</string>
    <string name="resumeLabel">Resume</string>
</resources>