<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/samsung_homework"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_selection_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_selection_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/statistics_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_statistics_string"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_selection_view" />

    <Button
        android:id="@+id/tictactoe_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/tictactoe_button_string"
        android:textSize="24sp"
        android:textColor="@color/teal_200"
        android:backgroundTint="#AAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/battle_ship_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_view" />

    <Button
        android:id="@+id/battle_ship_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:backgroundTint="#AAAAAA"
        android:textColor="@color/teal_200"
        android:text="@string/battleship_button_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tictactoe_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pacman_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/pacman_button_string"
        android:textSize="24sp"
        android:backgroundTint="#AAAAAA"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battle_ship_button" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="#AAAAAA"
        android:text="@string/statistics_button_string"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pacman_button" />

</androidx.constraintlayout.widget.ConstraintLayout>